--- a/B-Counter/B-Counter.csproj
+++ b/B-Counter/B-Counter.csproj
@@ -27,7 +27,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
     <ApplicationRevision>1</ApplicationRevision>
-    <ApplicationVersion>0.50.0410.%2a</ApplicationVersion>
+    <ApplicationVersion>0.60.0410.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -69,25 +69,33 @@
   <ItemGroup>
     <Reference Include="itextsharp">
       <HintPath>D:\Downloads\itextsharp-all-5.5.9\itextsharp-dll-core\itextsharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="itextsharp.pdfa">
       <HintPath>D:\Downloads\itextsharp-all-5.5.9\itextsharp.pdfa.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="itextsharp.xtra">
       <HintPath>D:\Downloads\itextsharp-all-5.5.9\itextsharp.xtra.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Spire.Common, Version=1.2.366.55040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Common.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Spire.Doc">
-      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Doc-FE\Bin\NET4.0\Spire.Doc.dll</HintPath>
+      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Doc.dll</HintPath>
     </Reference>
-    <Reference Include="Spire.License">
-      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Doc-FE\Bin\NET4.0\Spire.License.dll</HintPath>
-    </Reference>
-    <Reference Include="Spire.Pdf, Version=3.6.230.55040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+    <Reference Include="Spire.License, Version=1.3.2.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.pdf-fe\Bin\NET4.0\Spire.Pdf.dll</HintPath>
+      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.License.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="Spire.XLS">
-      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.XLS-FE\Bin\NET4.0\Spire.XLS.dll</HintPath>
+    <Reference Include="Spire.XLS, Version=7.9.0.55040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Program Files (x86)\e-iceblue\Spire.XLS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -146,6 +154,7 @@
     </EmbeddedResource>
     <None Include="B-Counter_1_TemporaryKey.pfx" />
     <None Include="B-Counter_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -166,6 +175,18 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="REF\itextsharp.dll" />
+    <EmbeddedResource Include="REF\itextsharp.pdfa.dll" />
+    <EmbeddedResource Include="REF\itextsharp.xtra.dll" />
+    <EmbeddedResource Include="REF\Microsoft.mshtml.dll" />
+    <EmbeddedResource Include="REF\Spire.Common.dll" />
+    <EmbeddedResource Include="REF\Spire.Doc.dll" />
+    <EmbeddedResource Include="REF\Spire.License.dll" />
+    <EmbeddedResource Include="REF\Spire.Pdf.dll" />
+    <EmbeddedResource Include="REF\Spire.XLS.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
