--- a/B-Counter/B-Counter.csproj
+++ b/B-Counter/B-Counter.csproj
@@ -26,7 +26,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>0.60.0410.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -84,8 +84,10 @@
       <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Spire.Doc">
+    <Reference Include="Spire.Doc, Version=4.7.23.4040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Program Files (x86)\e-iceblue\Spire.Doc.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Spire.License, Version=1.3.2.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
